updating geteventsbydaterange & minor mistakes